--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -653,3 +653,35 @@ ul.CTAs a {
   font-size: 0.8rem;
   color: grey;
 }
+
+/* OrderSuccess */
+.order_success-btn {
+  display:block;
+  width: 200px;
+  
+  margin-top: 1em;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
+  font-size: 1.2rem;
+  color: white;
+  background-color: #3ADB15;
+  text-decoration: none;
+  text-transform: capitalize;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  transition: all .3s ease-in-out;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -ms-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+}
+.order_success-btn:hover {
+  color: white;
+  background-color:#2ab10b;
+  text-decoration: none;
+  
+}
