Add new logo with it styles and made corrections paymentControllers.js

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -57,6 +57,10 @@ nav {
   width: 90%;
   margin-right: 35%;
 }
+#header-logo {
+  width: 166px;
+  margin-left: 35px;
+}
 
 #search_field {
   height: 2.4rem;
